--- a/.gitignore
+++ b/.gitignore
@@ -2,19 +2,4 @@
 2.0
 index copy.html
 portfolio-details.html
-assets/img/testimonials
-assets/img/apple-touch-icon.png
-assets/img/bg2.png
-assets/img/me.jpg
-assets/img/portfolio/portfolio-1.jpg
-assets/img/portfolio/portfolio-2.jpg
-assets/img/portfolio/portfolio-3.jpg
-assets/img/portfolio/portfolio-4.jpg
-assets/img/portfolio/portfolio-5.jpg
-assets/img/portfolio/portfolio-6.jpg
-assets/img/portfolio/portfolio-7.jpg
-assets/img/portfolio/portfolio-8.jpg
-assets/img/portfolio/portfolio-9.jpg
-assets/img/portfolio/portfolio-details-1.jpg
-assets/img/portfolio/portfolio-details-2.jpg
-assets/img/portfolio/portfolio-details-3.jpg
+assets/*
